cmake_minimum_required(VERSION 3.0.0)

set(target QtOpenGL)
project(${target})

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)

add_subdirectory(opengl_2dimgtext)
add_subdirectory(opengl_3d)
add_subdirectory(opengl_3dtext)
add_subdirectory(opengl_3dworld)
add_subdirectory(opengl_ball)
add_subdirectory(opengl_blend)
add_subdirectory(opengl_color)
add_subdirectory(opengl_flag)
add_subdirectory(opengl_fog)
add_subdirectory(opengl_geometry)
add_subdirectory(opengl_light)
add_subdirectory(opengl_linetimesound)
add_subdirectory(opengl_list)
add_subdirectory(opengl_mask)
add_subdirectory(opengl_move)
add_subdirectory(opengl_particle)
add_subdirectory(opengl_polygon)
add_subdirectory(opengl_rotate)
add_subdirectory(opengl_text)
add_subdirectory(opengl_texture)
add_subdirectory(opengl_window)
